// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules|layout/cards Brand card 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <div
        class="brand-card"
      >
        <div
          class="brand-card__image-wrapper"
        >
          <picture>
            <!---->
             
            <!---->
             
            <source
              media="(min-width: 768px)"
              srcset=""
            />
             
            <!---->
             
            <!---->
             
            <source
              media="(max-width: 480px)"
              srcset="/generator/svg/400/400"
            />
             
            <img
              alt=""
              class="img--responsive img--lazy"
              src=""
            />
          </picture>
        </div>
         
        <q
          class="brand-card__quote"
        >
          Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
        </q>
      </div>
    </section>
  </section>
</section>
`;

exports[`Storyshots Molecules|layout/cards Card 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <article
        class="card"
      >
        <div
          class="card__visual"
        >
          <div
            class="card__image"
          >
            <picture
              class="img--responsive"
            >
              <!---->
               
              <!---->
               
              <source
                media="(min-width: 768px)"
                srcset=""
              />
               
              <!---->
               
              <!---->
               
              <source
                media="(max-width: 480px)"
                srcset="/generator/svg/600/600"
              />
               
              <img
                alt=""
                class="img--responsive img--lazy"
                src=""
              />
            </picture>
          </div>
           
          <!---->
        </div>
         
        <div
          class="card__content"
        >
          <h3
            class="card__headline"
          >
            Lorum ipsum
          </h3>
           
          <p
            class="card__description"
          >
            Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
          </p>
           
          <a
            class="link card__link card__link"
            href="#/#"
          >
            <!---->
             
            <span
              class="link__underline"
            >
              content link
            </span>
          </a>
           
          <!---->
        </div>
      </article>
    </section>
  </section>
</section>
`;

exports[`Storyshots Molecules|layout/cards Reseller card 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <a
        class="reseller-card"
        fileinput="/generator/svg/120/120"
        href="https://lipsum.com"
        rel="noopener"
        tabindex="0"
        target="_blank"
        to="https://lipsum.com"
      >
        <div
          class="reseller-card__header"
        >
          <div
            class="reseller-card__image-wrapper"
          >
            <picture>
              <!---->
               
              <!---->
               
              <!---->
               
              <!---->
               
              <!---->
               
              <source
                media="(max-width: 480px)"
                srcset="/generator/svg/120/120"
              />
               
              <img
                alt=""
                class="img--responsive img--lazy"
                src=""
              />
            </picture>
          </div>
           
          <div
            class="reseller-card__description"
          >
            <h4
              class="reseller-card__title"
            >
              
                Reseller name
            
            </h4>
             
            <p
              class="reseller-card__showroom-count"
            >
              
                2 
            
            </p>
          </div>
        </div>
         
        <div
          class="reseller-card__footer"
        >
          <span
            class="link faux-content-link reseller-card__link"
          >
            <span
              class="link__underline"
            >
              
                Visit website
            
            </span>
          </span>
        </div>
      </a>
    </section>
  </section>
</section>
`;
